fixed layout bugs

--- a/client/styles/app.less
+++ b/client/styles/app.less
@@ -231,7 +231,8 @@ a {
   margin-left: 85px;
 
   .tablet({
-    margin-left: 0;
+    margin: 0 10px;
+    max-width: 100%;
   });
 
   &__ico {
