--- a/client/styles/part/hamburger.less
+++ b/client/styles/part/hamburger.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  z-index: 100;
 
   &:hover {
     .hamburger__line {
