--- a/client/styles/part/mobile-menu.less
+++ b/client/styles/part/mobile-menu.less
@@ -11,6 +11,7 @@
     border-right: 1px solid #e9e9e9;
     transition: transform 450ms ease;
     transform: translate(-250px, 0);
+    z-index: 50;
 
     &__list{
       padding: 25px 0 0 20px;
